--- a/20208/8班七上周志.html
+++ b/20208/8班七上周志.html
@@ -136,15 +136,15 @@
 		    口号：奋斗点亮自己 光芒照亮他人<br />
 		    结构：班主任----班委会----学习小组-----家长群</p>
 		  <p>班委会<br />
-		    班长：王艺霖                副班长：谢彤             中队长：严逸冰 <br />
-		    学习委员：张扬柯           体育委员：李子豪         宣传委员：高悦然 <br />
-		    文娱委员：李沛霖           生活委员：王绚儿          纪律委员：李承辉<br />
-		    电教管理员：刘圳宸  
-		    静校管理员：庞子傲<br />
-		    卫生委员：郑一民（总负责）、陈华慈（中午）、李嘉骏（傍晚）<br />
-学习小组：仁（曹熙媛）、义（李梓昕）、礼（欧宇杰）、智（吴毓焓）、信（张杨柯）</p>
+		    班长：艺                副班长：彤             中队长：冰 <br />
+		    学习委员：柯           体育委员：豪         宣传委员：悦 <br />
+		    文娱委员：沛           生活委员：绚          纪律委员：承<br />
+		    电教管理员：圳  
+		    静校管理员：庞<br />
+		    卫生委员：民（总负责）、慈（中午）、骏（傍晚）<br />
+学习小组：仁（媛）、义（昕）、礼（欧）、智（焓）、信（柯）</p>
 		  <p>家委会—— <br />
-		    会长：罗女士（扬柯妈妈）<br />
+		    会长：罗女士（柯妈妈）<br />
 		    学习部：宇杰妈妈，悦然妈妈，容达妈妈<br />
 		    文体部：瑾禹妈妈，静怡妈妈，毓焓妈妈<br />
 		    宣传部：婧语妈妈，哲宇妈妈<br />
@@ -193,45 +193,45 @@
 	    1月18日晨，学生安全教育+年级“如何看待成绩”<br />
 	    <br />
 	    2、期末考试成绩<br />
-	    前十名：曹熙媛、杨元曦、张扬柯、付子裕、徐婧语、王艺霖、丁思云、李嘉骏、林昶荣、陈华慈、江静怡<br />
+	    前十名：媛、曦、柯、付、语、艺、云、骏、昶、慈、江<br />
 	    小组均分：423（仁）  419（义）  416（礼）     401（信）   394（智） <br />
-        小组头名：曹熙媛（仁）、李嘉骏（义）、林昶荣（礼）、徐婧语（智）、杨元曦（信）
+        小组头名：媛（仁）、骏（义）、昶（礼）、语（智）、曦（信）
 	      <p>单科情况（前200）：<br />
-	      语文：曹熙媛、付子裕、徐婧语、陈华慈、丁思云、杨元曦、李嘉骏、高悦然、位一欧、王艺霖、毛雨洋、
-        郑一民、李梓昕、李孟方鑫<br />
-        数学：张扬柯、林昶荣、欧宇杰、丁思云、李承辉、曹熙媛、付子裕、陈华慈、刘圳宸、杨元曦、王艺霖、
-        李嘉骏、吴卓桁<br />
-        英语：王艺霖、曹熙媛、江静怡、李嘉骏、付子裕、杨元曦、丁思云、胡铭灏、林昶荣、郑一民、陈华慈、
-        徐婧语、刘圳宸、吴毓焓、张扬柯、庞子傲、位一欧<br />
-        历史：付子裕、王艺霖、刘圳宸、曹熙媛、张扬柯、白石齐、胡彦淳、郑一民、位一欧、陈华慈、徐婧语、
-        李梓昕、杨哲宇、李承辉、吴毓焓<br />
-        道法：曹熙媛、张扬柯、王绚儿、陈玥仪、杨哲宇、李承辉、郑一民、王艺霖、徐婧语、丁瑾禹、丁思云、
-        李嘉骏、毛雨洋、高悦然、付子裕、位一欧、李子豪、刘圳宸、吴毓焓、徐培杰、李沛霖<br />
-        体育：杨元曦、江静怡、吴卓桁、曹熙媛、林昶荣、谢彤、胡彦淳、丘梓淇、徐婧语、张扬柯、李嘉骏、李子豪、陈玥仪、丁瑾禹、张凯然、王浩权、袁千茹<br />
-        地理：郑一民、李承辉、王艺霖、付子裕、吴毓焓、杨元曦、郭浩涵、位一欧、杨哲宇、丁思云、陈华慈、
-	      白石齐、曹熙媛、张扬柯、孙彦良、欧宇杰、李嘉骏、张凯然、刘圳宸<br />
-            生物：曹熙媛、付子裕、陈华慈、张扬柯、丁思云、毛雨洋、刘圳宸、位一欧、徐婧语、王艺霖、杨元曦、
-        郑一民、李承辉<br />
+	      语文：媛、付、语、慈、云、曦、骏、悦、位、艺、毛、
+        民、昕、李孟<br />
+        数学：柯、昶、欧、云、承、媛、付、慈、圳、曦、艺、
+        骏、桁<br />
+        英语：艺、媛、江、骏、付、曦、云、灏、昶、民、慈、
+        语、圳、焓、柯、庞、位<br />
+        历史：付、艺、圳、媛、柯、白、淳、民、位、慈、语、
+        昕、哲、承、焓<br />
+        道法：媛、柯、绚、仪、哲、承、民、艺、语、禹、云、
+        骏、毛、悦、付、位、豪、圳、焓、培、沛<br />
+        体育：曦、江、桁、媛、昶、彤、淳、丘、语、柯、骏、豪、仪、禹、凯、权、茹<br />
+        地理：民、承、艺、付、焓、曦、浩、位、哲、云、慈、
+	      白、媛、柯、彦、欧、骏、凯、圳<br />
+            生物：媛、付、慈、柯、云、毛、圳、位、语、艺、曦、
+        民、承<br />
         <br />
         3、散学典礼与期末表彰<br />
         2021年1月22日上午，成美楼先锋剧场，现场直播。<br />
         <img src="平180.jpg" width="400" height="300" /><img src="平182.jpg" width="400" height="300" /><br />
         <img src="平183.jpg" width="400" height="300" /><img src="平184.jpg" width="400" height="300" /><br />
         优秀学生干部：<br />
-        王艺霖、谢彤、高悦然</p>
+        艺、彤、悦</p>
           <p>            文明规范生：<br />
-            陈华慈、丁思云、曹熙媛、陈玥仪、付子裕、
-            李梓昕、李嘉骏、江静怡、位一欧、刘圳宸、
-            林昶荣、毛雨洋、王绚儿、徐婧语、李沛霖、<br />
-            杨元曦、张扬柯、姚彩晴、杨哲宇、张凯然<br />
+            慈、云、媛、仪、付、
+            昕、骏、江、位、圳、
+            昶、毛、绚、语、沛、
+            曦、柯、彩、哲、凯<br />
             <br />
-            领奖代表：曹熙媛、张扬柯、李承辉、江静怡<br />
-            自我超越：李子豪、胡彦淳<br />
+            领奖代表：媛、柯、承、江<br />
+            自我超越：豪、淳<br />
             <br />
             班级风采展示：<br />
-            主讲人：王艺霖、高悦然<br />
-        学生评委：付子裕、李嘉骏、刘圳宸、谢彤、张凯然<br />
-        撰稿与制作：王艺霖、高悦然、陈玥仪<br />
+            主讲人：艺、悦<br />
+        学生评委：付、骏、圳、彤、凯<br />
+        撰稿与制作：艺、悦、仪<br />
         <img src="平185.jpg" width="225" height="300" /><img src="平186.jpg" width="500" height="300" /><br />
         <br />
         4、布置考场<br />
@@ -265,7 +265,6 @@
           4、完成义务劳动<br />
 近三周，每天中午部分同学在          D204教室义务清洁。<br />
 <br />
-<br />
           <br />
 	    </p>	    </td>
   </tr>
@@ -274,14 +273,14 @@
   </tr>
 	<tr>
 	  <td class="style27">1、年级升旗仪式——凤凰木杯颁奖<br />
-	    付子裕、曹熙媛获得二等奖<br />
+	    付、媛获得二等奖<br />
 	    <br />
 	    2、图书馆“夕阳练”（复习）<br />
 	    <img src="平169.jpg" width="400" height="300" /><img src="平170.jpg" width="400" height="300" /><br />
 	    <img src="平171.jpg" width="400" height="300" /><img src="平172.jpg" width="400" height="300" /><br />
 	    <br />
 	    3、仁组内部调整<br />
-	    通过老组长推荐，组员投票，新选曹熙媛担任组长。<br />
+	    通过老组长推荐，组员投票，新选媛担任组长。<br />
 	    <br />
 	    4、综合素质评价工作启动<br />
 	    <img src="平173.jpg" width="300" height="140" /></td>
@@ -309,7 +308,7 @@
 	    <img src="平152.jpg" width="400" height="300" /><img src="平148.jpg" width="400" height="300" /><br />
 	    <br />
 	    3、徐婧语参加校园十大歌手决赛<br />
-	    12月31日下午放学后，校园十大歌手决赛在先锋剧场通过网络的方式直播，婧语同学最终获得第六名的好成绩。粉丝们在教室里观看比赛。<br />
+	    12月31日下午放学后，校园十大歌手决赛在先锋剧场通过网络的方式直播，语同学最终获得第六名的好成绩。粉丝们在教室里观看比赛。<br />
 	    <img src="平143.jpg" width="400" height="300" /><img src="平144.jpg" width="400" height="300" /><br />
 	    <img src="平146.jpg" width="400" height="300" /><img src="平147.jpg" width="400" height="300" /><br />
 	    <br />
@@ -345,8 +344,7 @@
 	  <img src="平136.jpg" width="400" height="266" /><img src="平137.jpg" width="400" height="266" /><br />
 	  <br />
 	  6、校园十大歌手<br />
-	  徐婧语同学进决赛<br />
-	  <img src="平141.jpg" width="400" height="146" /><br />
+	  语同学进决赛<br />
 	  <img src="平125.jpg" width="400" height="300" /><br />
 	  <br />
 	  7、整顿学风<br />
@@ -378,7 +376,7 @@
 	    12月17日美术课上，小组的涂鸦——<br />
 	    <img src="平124.jpg" width="400" height="254" /><img src="平123.jpg" width="400" height="254" /></p>
 	    <p>6、 十大歌手复赛<br />
-	      徐婧语参加<br />
+	      语参加<br />
           <br />
 	      7、各小组调整座位<br />
           <img src="平122.jpg" width="400" height="238" /></p></td>
@@ -390,8 +388,8 @@
 	  <td class="style27"><p>1、全校大会<br />
 	    12月7日，力行楼。运动会表彰。<br />
 	    我班获得精神文明奖、方队最佳队列奖，最佳才艺奖。团体总分103分.<br />
-	  最佳运动员：张扬柯、胡彦淳、徐婧语、林昶荣、吴卓桁、谢彤<br />
-	  最佳服务奖：高悦然、王浩权、郑一民、杨哲宇、吴弈然、胡铭灏</p>
+	  最佳运动员：柯、淳、语、昶、桁、彤<br />
+	  最佳服务奖：悦、权、民、哲、弈、灏</p>
 	    <p><img src="平106.jpg" width="600" height="450" /><br />
 	        <img src="平108.jpg" width="400" height="300" /><img src="平107.jpg" width="400" height="300" /><br />
               <br />
@@ -405,7 +403,7 @@
                   4、部分同学接种流感疫苗<br />
                   5、布置考场<br />
                   6、十大歌手海选<br />
-                  徐婧语进复赛<br />
+                  语进复赛<br />
                   7、家委公众号第二期：<a href="https://mp.weixin.qq.com/s/FbffX7z-Cpu7EX4AH1GT4A">陪伴是一种修行</a><br />
                   <br />
         </p></td>
@@ -426,12 +424,12 @@
 	    <img src="平99.jpg" width="400" height="300" /><img src="平98.jpg" width="400" height="300" /><br />
 	    <br />
 	    4、改选班委<br />
-	    班长：王艺霖                副班长：谢彤             中队长：严逸冰 <br />
-	    学习委员：张扬柯           体育委员：李子豪         宣传委员：高悦然 <br />
-	    文娱委员：李沛霖           生活委员：王绚儿          纪律委员：李承辉<br />
-	    电教管理员：刘圳宸  
-	    静校管理员：庞子傲<br />
-	    卫生委员：郑一民（总负责）、陈华慈（中午）、李嘉骏（傍晚）<br />
+	    班长：艺                副班长：彤             中队长：冰 <br />
+	    学习委员：柯           体育委员：豪         宣传委员：悦然<br />
+	    文娱委员：沛           生活委员：绚          纪律委员：承<br />
+	    电教管理员：圳  
+	    静校管理员：庞<br />
+	    卫生委员：民（总负责）、慈（中午）、骏（傍晚）<br />
 	    <img src="平105.jpg" width="400" height="300" /><img src="平104.jpg" width="400" height="300" /><br />
 	    <br />
 	    5、准备接种流感疫苗<br />
@@ -481,17 +479,17 @@
 	    11月14日晨，成美楼，宣讲综合评价。老师和家长网上填表。<br />
 	    <br />
 	    2、期中成绩<br />
-	    前十名：王艺霖、曹熙媛、张扬柯、陈华慈、付子裕、丁思云、吴毓焓、徐婧语、江静怡、杨元曦<br />
+	    前十名：艺、媛、柯、慈、付、云、焓、语、江、曦<br />
         小组均分：388.15（仁） 376.18（礼）   370.5（义）    366.98（信）   349.5（智） <br />
-        小组头名：曹熙媛（仁）、江静怡（义）、欧宇杰（礼）、王艺霖（智）、张扬柯（信）
+        小组头名：媛（仁）、江（义）、欧（礼）、艺（智）、柯（信）
 	      <p>单科情况（前30%）：<br />
-        语文（前30%）：曹熙媛、付子裕、陈华慈、丁思云、高悦然、江静怡、吴毓焓、张扬柯、徐婧语、王艺霖、毛雨洋、李嘉骏、李孟方鑫、位一欧<br />
-        数学（前30%）：欧宇杰、吴毓焓、陈华慈、张扬柯、王艺霖、林昶荣、丁思云、李承辉、付子裕、李梓昕、高宇轩<br />
-        英语（前30%）：曹熙媛、高悦然、徐婧语、丁思云、李嘉骏、江静怡、王艺霖、位一欧、林昶荣、陈玥仪、胡铭灏、杨元曦、吴毓焓、陈华慈、张扬柯、刘圳宸、付子裕、邓睿哲<br />
-        历史（前30%）：付子裕、江静怡、王艺霖、李梓昕、杨哲宇、曹熙媛、徐婧语、陈华慈、毛雨洋、张扬柯、李承辉、白石齐、李嘉骏、杨元曦、刘圳宸、李孟方鑫、郑一民<br />
-        道法（前30%）：曹熙媛、高悦然、吴毓焓、丁思云、张扬柯、郑一民、徐婧语、付子裕、王艺霖、陈玥仪、李嘉骏、欧宇杰、杨元曦、杨哲宇、江静怡、毛雨洋、林昶荣、陈华慈、位一欧、赵启航、庞子傲、李沛霖、张容达、袁千茹、丘梓淇、李孟方鑫、高宇轩、吴卓桁<br />
-        地理（前30%）：丁思云、付子裕、王艺霖、吴毓焓、杨元曦、李承辉、李梓昕、张扬柯、欧宇杰、吴卓桁、杨浩宸、曹熙媛、徐婧语、陈华慈、刘圳宸、郑一民、杨哲宇、林昶荣、张容达、李孟方鑫<br />
-        生物（前30%）：王艺霖、曹熙媛、付子裕、丁思云、杨元曦、陈华慈、刘圳宸、位一欧、张扬柯、江静怡、徐婧语、毛雨洋、王绚儿<br />  
+        语文（前30%）：媛、付、慈、云、悦、江、焓、柯、语、艺、毛、骏、李孟、位<br />
+        数学（前30%）：欧、焓、慈、柯、艺、昶、云、承、付、昕、轩<br />
+        英语（前30%）：媛、悦、语、云、骏、江、艺、位、昶、仪、灏、曦、焓、慈、柯、圳、付、邓<br />
+        历史（前30%）：付、江、艺、昕、哲、媛、语、慈、毛、柯、承、白、骏、曦、圳、李孟、民<br />
+        道法（前30%）：媛、悦、焓、云、柯、民、语、付、艺、仪、骏、欧、曦、哲、江、毛、昶、慈、位、航、庞、沛、达、茹、丘、李孟、轩、桁<br />
+        地理（前30%）：云、付、艺、焓、曦、承、昕、柯、欧、桁、宸、媛、语、慈、圳、民、哲、昶、达、李孟<br />
+        生物（前30%）：艺、媛、付、云、曦、慈、圳、位、柯、江、语、毛、绚<br />  
         <br />
         3.成立家委会<br /> 
         会长：罗女士（扬柯妈妈）<br />
@@ -531,14 +529,14 @@
 	    11月12-13日，期中考试。<br />
 	    <br />
 	    3.运动会报名<br />
-	    谢彤、李子豪同学在组织运动会各项比赛项目的报名<br />
+	    彤、豪同学在组织运动会各项比赛项目的报名<br />
 	    <img src="平70.jpg" width="400" height="300" /><img src="平69.jpg" width="400" height="300" /><br />
 	    <br />
 	    4.整理教室<br />
-	  陈华慈、林昶荣等初二物理考完后，打扫教室。<br />
+	  慈、昶等初二物理考完后，打扫教室。<br />
 	  <img src="平71.jpg" width="400" height="300" /></p>
 	    <p>5、班服设计<br />
-	      严逸冰、高悦然、李沛霖、江静仪等同学设计运动会班服</p>      </td>
+	      冰、悦、沛、江等同学设计运动会班服</p>      </td>
   </tr>
 	<tr>
 	  <td class="style28"><span class="style33">第10周<span class="STYLE39">（班主任外出，数学王文东老师代）</span></span></td>
@@ -571,9 +569,9 @@
 	        <img src="平67.jpg" width="400" height="300" /><img src="平68.jpg" width="400" height="300" /><br />
               <br />
               3、交友之道<br />
-              10月30日上午8点45分，谢彤、张容达、汪子博、杨浩宸、王浩权、郑一民、赵启航。见证一场心动的握手。<br />
+              10月30日上午8点45分，彤、达、汪、宸、权、民、航。见证一场心动的握手。<br />
                 <br />
-              4、安排陈华慈协助保洁管理<br />
+              4、安排慈协助保洁管理<br />
               <br />
 	    </p></td>
   </tr>
@@ -583,7 +581,7 @@
 	<tr>
 	  <td class="style27">1、军训<br />
 	    2020年10月21-23日，银瓶山东方阳光拓展基地。<br />
-	    优秀学员：谢彤，位一欧，温依欣，李沛霖，严逸冰，邓睿哲，沈琮博，蔡鸿铠，姚彩晴，吴卓桁，吴毓焓，郑一民，李孟方鑫，李承辉，杨哲宇<br />
+	    优秀学员：彤，位，温，沛，冰，邓，琮，铠，彩，桁，焓，民，李孟，承，哲<br />
 	    <br />
 	    <img src="平59.jpg" width="400" height="300" /><img src="平60.jpg" width="400" height="300" /><br />
 	    <img src="平61.jpg" width="400" height="300" /><img src="平62.jpg" width="400" height="300" /><br />
@@ -596,7 +594,7 @@
   </tr>
 	<tr>
 	  <td class="style27">1、林昶荣同学外出参赛<br />
-	    10月14-19日，林昶荣同学作为深圳市羽毛球队的一员，参加了广东省青少年锦标赛。<br />
+	    10月14-19日，昶同学作为深圳市羽毛球队的一员，参加了广东省青少年锦标赛。<br />
 	    <img src="平56.jpg" width="600" height="450" /><br />
 	    <br />
 	    2、主题班会<br />
@@ -612,10 +610,9 @@
 	    <img src="平57.jpg" width="400" height="299" /><br />
 	    <br />
 	    5、社团活动<br />
-	    （1）赵启航同学当选辩论社的副社长<br />
-	    （2）陈华慈同学担任学生会执委<br />
-	    （3）推荐严逸冰同学竞选大队委文体委员<br />
-	    <br />
+	    （1）航同学当选辩论社的副社长<br />
+	    （2）慈同学担任学生会执委<br />
+	    （3）推荐冰同学竞选大队委文体委员<br />
 	    <br />
 	    6、注意运动安全</td>
   </tr>
@@ -688,7 +685,7 @@
 	    <img src="平39.jpg" width="400" height="300" /><img src="平40.jpg" width="400" height="300" /><br />
 	    <br />
 	    2.完成第一期板报<br />
-	    宣传委员高悦然与部分同学一起完成“感恩母校，立志深中”主题板报<br />
+	    宣传委员悦与部分同学一起完成“感恩母校，立志深中”主题板报<br />
 	    <img src="平26.jpg" width="400" height="300" /><img src="平27.jpg" width="400" height="300" /><br />
 	    <img src="平33.jpg" width="400" height="300" /><img src="平34.jpg" width="400" height="300" /><br />
 	    <br />
@@ -734,10 +731,10 @@
           <br />
         7、其他<br />
         （1）第二次换座位<br />
-        （2）静校分流，汪子博同学请缨担任管理员<br />
-        （3）收集学生QQ号（谢彤）<br />
-        （4）准备新学期板报（高悦然）<br />
-        （5）第一次大扫除（郑一民）<br />
+        （2）静校分流，汪同学请缨担任管理员<br />
+        （3）收集学生QQ号（彤）<br />
+        （4）准备新学期板报（悦）<br />
+        （5）第一次大扫除（民）<br />
         （6）个别社团招新<br />
           <img src="平24.jpg" width="450" height="225" /></p>
       <p>&nbsp;</p></td>
@@ -776,18 +773,18 @@
 		  <img src="平2.jpg" width="400" height="300" /></p>
 		<p class="style27"><br />
 		2、分组（根据音序和性别组合）<br />
-		  仁（11人）：白石齐、蔡鸿铠、陈华慈、邓睿哲、付子裕、高宇轩；曹熙媛、陈玥仪、丁瑾禹、丁思云、高悦然。<br />
-		  义（11人）：郭浩涵、李承辉、李嘉骏、胡铭灏、李孟方鑫、李子豪；胡彦淳、黄宝仪、李梓昕、江静怡、李沛霖。<br />
-		  礼（10人）：林昶荣、刘圳宸、欧宇杰、庞子傲、沈琮博、施柏帆；毛雨洋、丘梓淇、王绚儿、位一欧。<br />
-		  智（11人）：孙彦良、汪子博、王艺霖、王浩权、吴弈然、吴毓焓、吴卓桁；温依欣、谢彤、徐婧语、严逸冰。<br />
-		  信（11人）：郑一民、张扬柯、张凯然、杨哲宇、杨浩宸、徐培杰、赵启航；姚彩晴、杨元曦、袁千茹、张容达。<br />
+		  仁（11人）：白、铠、慈、邓、付、轩；媛、仪、禹、云、悦。<br />
+		  义（11人）：涵、承、骏、灏、李孟、豪；淳、宝、昕、江、沛。<br />
+		  礼（10人）：昶、圳、欧、庞、琮、施；毛、丘、绚、位。<br />
+		  智（11人）：彦、汪、艺、权、弈、焓、桁；温、彤、语、冰。<br />
+		  信（11人）：民、柯、凯、哲、宸、培、航；彩、曦、茹、达。<br />
 		</p>
 		<p class="style27">3、安排座位<br />
 		  <img src="平1.jpg" width="450" height="258" />		</p>
 		<p class="style27">		  4、初选临时班委<br />
-		  班委会——班长-谢彤 副班长-李子豪 中队长-杨元曦 学习委员-张扬柯 卫生委员-郑一民 宣传委员-高悦然 纪律委员-李承辉<br />
-体育委员-李子豪 文娱委员-李沛霖 生活委员-王绚儿 电教管理员-刘圳宸 静校管理员-  <br />
-学习小组：仁（丁瑾禹）、义（李梓昕）、礼（欧宇杰）、智（王艺霖）、信（张容达）</p>
+		  班委会——班长-彤 副班长-豪 中队长-曦 学习委员-柯 卫生委员-民 宣传委员-悦 纪律委员-承<br />
+体育委员-豪 文娱委员-沛 生活委员-绚 电教管理员-圳 静校管理员-  <br />
+学习小组：仁（禹）、义（昕）、礼（欧）、智（艺）、信（达）</p>
 		<p class="style27"><img src="平3.jpg" width="400" height="300" /><img src="平4.jpg" width="400" height="300" /></p>
 		<p class="style27">		  5、领书<br />
 		  <img src="平5.jpg" width="400" height="300" /><img src="平6.jpg" width="400" height="300" /><br />
