--- a/20208/8班七下周志.html
+++ b/20208/8班七下周志.html
@@ -136,13 +136,13 @@
 		    口号：奋斗点亮自己 光芒照亮他人<br />
 		    结构：班主任----班委会----学习小组-----家长群</p>
 		  <p>班委会<br />
-		    班长：王艺霖                副班长：谢彤              <br />
-		    学习委员：张扬柯           体育委员：李子豪         宣传委员：高悦然 <br />
-		    文娱委员：李沛霖           生活委员：王绚儿          纪律委员：李承辉<br />
-		    电教管理员：刘圳宸  
-		    静校管理员：高悦然（协理王绚儿、监督李承辉）、姚彩晴（自习室）、江静怡（图书馆）<br />
-		    卫生委员：郑一民（总负责）、李嘉骏 +李承辉+胡明灏（全天+傍晚）<br />
-学习小组：仁（曹熙媛）、义（李梓昕）、礼（欧宇杰）、智（吴毓焓）、信（张扬柯）</p>
+		    班长：艺                副班长：彤              <br />
+		    学习委员：柯           体育委员：豪         宣传委员：悦<br />
+		    文娱委员：沛           生活委员：绚          纪律委员：承<br />
+		    电教管理员：圳  
+		    静校管理员：悦（协理绚、监督承）、彩（自习室）、江（图书馆）<br />
+		    卫生委员：民（总负责）、骏 +承+灏（全天+傍晚）<br />
+学习小组：仁（媛）、义（昕）、礼（欧）、智（焓）、信（柯）</p>
 		  <p>家委会—— <br />
 		    会长：黎女士（悦然妈）<br />
 		    学习部：宇杰妈，悦然妈，容达妈、扬柯妈<br />
@@ -178,53 +178,51 @@
 								<source src="./banjipingbi3.mp4" type="video/mp4">
 		</video><br />
 	    年级评优表彰：<br />
-	    年级卓越奖：付子裕、张扬柯、曹熙媛<br />
-	    班级卓越奖：付子裕
-	    <br />
-	    学科精英奖：张扬柯（道法）、付 曹 思 艺（生物）、傅 艺（地理）、张扬柯（以下体育）、李嘉骏、曹熙媛、欧宇杰、杨元曦、丁瑾禹、林昶荣、江静怡、吴毓焓、张凯然、胡彦淳、吴卓桁、丘梓淇<br />
-	    自我超越奖：邓睿哲<br />
-	    三好：曹熙媛、李嘉骏、林昶荣、张扬柯、江静怡<br />
-	    优干：王艺霖、郑一民、高悦然<br />
-	    创新：欧宇杰、刘圳宸、杨元曦、李承辉<br />
-	    公益：王浩权、姚彩晴、胡铭灏、徐培杰<br />
-	    特长：陈玥仪、陈华慈、徐婧语、胡彦淳<br />
-	    超越：李梓昕、王绚儿、丁瑾禹、张凯然<br />
-	    好习惯：付子裕、丁思云、吴毓焓、位一欧<br />
-	    规范：谢彤、严逸冰、李沛霖、白石齐、丘梓淇、杨哲宇、黄宝仪、张容达、孙彦良、高宇轩、沈琮博
+	    年级卓越奖：付、柯、媛<br />
+	    班级卓越奖：付<br />
+	    学科精英奖：柯（道法）、付 曹 云 艺（生物）、付 艺（地理）、柯（以下体育）、骏、曹、欧、曦、禹、昶、江、焓、凯、淳、桁、丘<br />
+	    自我超越奖：邓<br />
+	    三好：曹、骏、昶、柯、江<br />
+	    优干：艺、民、悦<br />
+	    创新：欧、圳、曦、承<br />
+	    公益：权、彩、灏、培<br />
+	    特长：玥、慈、语、淳<br />
+	    超越：昕、绚、禹、凯<br />
+	    好习惯：付、云、焓、位<br />
+	    规范：彤、冰、沛、白、丘、哲、宝、达、良、轩、琮
 	    <br />
 	    <br />
 	    2、期末考试<br />
 	    7月5日-6日，期末考试。<br />
-	    前十名：付子裕、张扬柯、曹熙媛、李嘉骏、丁思云、王艺霖、吴毓焓、欧宇杰、林昶荣、陈玥仪<br />
+	    前十名：付、柯、曹、骏、云、艺、焓、欧、昶、玥<br />
 	    <br />
 小组均分：408（仁）  393（礼）   391（义）  380（信）   362（智） <br />
-小组头名：付子裕（仁）、李嘉骏（义）、欧宇杰（礼）、王艺霖（智）、张扬柯（信） </p>
+小组头名：付（仁）、骏（义）、欧（礼）、艺（智）、柯（信） </p>
 	    <p>单科情况（1-12前200）：<br />
-	      语文：曹熙媛（111.5）、付子裕、吴毓焓、丁思云、高悦然、王艺霖、陈玥仪、郑一民、欧宇杰、张扬柯、李孟方鑫、徐婧语、江静怡、毛雨洋、李嘉骏、位一欧、张凯然<br />
+	      语文：曹（111.5）、付、焓、云、悦、艺、玥、民、欧、柯、李孟、语、江、毛、骏、位、凯<br />
   <br />
-	      数学：欧宇杰（98）、付子裕、李承辉、张扬柯、林昶荣、吴毓焓、陈玥仪、丁思云、位一欧<br />
+	      数学：欧（98）、付、承、柯、昶、焓、玥、云、位<br />
   <br />
-	      英语：曹熙媛（89.5）、江静怡、徐婧语、付子裕、丁思云、王艺霖、陈玥仪、李嘉骏、林昶荣、杨元曦、高悦然、位一欧、陈华慈、刘圳宸、张扬柯、胡铭灏、郑一民、吴毓焓<br />
+	      英语：曹（89.5）、江、语、付、云、艺、玥、骏、昶、曦、悦、位、慈、圳、柯、灏、民、焓<br />
 	      <br />
-	      历史：付子裕（65）、张扬柯、李嘉骏、王艺霖、白石齐、郑一民、陈华慈、吴毓焓、林昶荣、曹熙媛、丁思云、刘圳宸、李承辉、杨元曦、徐婧语、胡彦淳、胡铭灏、高宇轩、孙彦良、张凯然<br />
+	      历史：付（65）、柯、骏、艺、白、郑、慈、焓、昶、曹、云、圳、承、曦、语、淳、灏、轩、良、凯<br />
 	      <br />
-	      道法：张扬柯（50）、李嘉骏、付子裕、郑一民、陈玥仪、曹熙媛、丁思云、王艺霖、刘圳宸、位一欧、庞子傲、欧宇杰、高悦然、李承辉、黄宝仪、杨元曦、陈华慈<br />
+	      道法：柯（50）、骏、付、民、玥、曹、云、艺、圳、位、庞、欧、悦、承、宝、曦、慈<br />
 	      <br />
-	      体育：张扬柯、李嘉骏、曹熙媛、欧宇杰、杨元曦、丁瑾禹、林昶荣、江静怡、吴毓焓、张凯然、胡彦淳、吴卓桁、丘梓淇（以上100）、黄宝仪、徐婧语、王绚儿、袁千茹<br />
+	      体育：柯、骏、曹、欧、曦、禹、昶、江、焓、凯、淳、桁、丘（以上100）、宝、语、绚、茹<br />
             <br />
-	      地理：付子裕（98）、王艺霖（98）、张扬柯、刘圳宸、李梓昕、郑一民、陈华慈、曹熙媛、杨哲宇、白石齐、吴毓焓、丁思云、李承辉、杨元曦、孙彦良、蔡鸿铠、李嘉骏、位一欧、陈玥仪、郭浩涵、林昶荣、胡彦淳、袁千茹、欧宇杰<br />
+	      地理：付（98）、艺（98）、柯、圳、昕、民、慈、曹、哲、白、焓、云、承、曦、良、铠、骏、位、玥、涵、昶、淳、茹、欧<br />
 	      <br />
-	      生物：曹熙媛（100）、付子裕（100）、丁思云（100）、王艺霖（100）、位一欧、刘圳宸、张扬柯、李梓昕、陈华慈、吴毓焓、陈玥仪、郑一民、杨元曦、李承辉、杨哲宇、李嘉骏、高悦然、欧宇杰</p>
-	    <p><br />
-	      3、班委调整<br />
+	      生物：曹（100）、付（100）、云（100）、艺（100）、位、圳、柯、昕、慈、焓、玥、民、曦、承、哲、骏、悦、欧</p>
+	    <p>	      3、班委调整<br />
 	      根据前期评优投票，保留优干，纳入三好，个别谈话，初步确定初二班委名单如下：<br />
-          班长：王艺霖                副班长：曹熙媛              <br />
-学习委员：张扬柯           体育委员：李嘉骏、陈华慈、江静怡         宣传委员：高悦然 <br />
-文娱委员：陈玥仪           生活委员：王绚儿          纪律委员：李承辉<br />
-电教管理员：刘圳宸  
-		    静校管理员：江静怡（协理王绚儿、监督李承辉）、姚彩晴（自习室）、丁思云（图书馆）<br />
-卫生委员：郑一民（总负责）、李嘉骏 +李承辉+胡明灏（全天+傍晚）<br />
-学习小组：仁（付子裕）、义（李梓昕）、礼（欧宇杰）、智（吴毓焓）、信（张扬柯）<br />
+          班长：艺                副班长：曹              <br />
+学习委员：柯           体育委员：骏、慈、江         宣传委员：悦<br />
+文娱委员：玥           生活委员：绚          纪律委员：承<br />
+电教管理员：圳  
+		    静校管理员：江（协理绚、监督承）、彩（自习室）、云（图书馆）<br />
+卫生委员：民（总负责）、骏 +承+灏（全天+傍晚）<br />
+学习小组：仁（付）、义（昕）、礼（欧）、智（焓）、信（柯）<br />
           <br />
 	      4、综合评价<br />
 	      7月8日，学生自评、亲子共评，班主任评，顺利完成。<br />
@@ -319,7 +317,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	<tr>
 	  <td class="style27"><p>1、6月7-9日，高考放假三天</p>
         <p>2、优生推荐<br />
-        按学校评优通知，学生自我推荐。我班玥仪、扬柯、谢彤三位同学参评。</p>
+        按学校评优通知，学生自我推荐。我班玥、柯、彤三位同学参评。</p>
         <p>3、实习廖老师汇报课<br />
       6月12日，实习廖老师在我班上汇报课《望岳》。<br />
           <img src="平313.jpg" width="500" height="375" /></p>
@@ -353,7 +351,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	    <img src="平301.jpg" width="400" height="300" /><img src="平303.jpg" width="400" height="300" /><br />
 	    <img src="平302.jpg" width="400" height="300" /><img src="平300.jpg" width="400" height="300" /></p>
 	    <p>3、网络安全教育<br />
-	      本周由班长王艺霖同学主讲。<br />
+	      本周由班长艺同学主讲。<br />
 	        <img src="平309.jpg" width="500" height="375" /><br />
               <br />
             4、
@@ -395,7 +393,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	  <img src="平304.jpg" width="400" height="300" /><br />
 	  <br />
 	  5、电子手表管理<br />
-	  统一协管箱启用，瑾禹同学管钥匙<br />
+	  统一协管箱启用，禹同学管钥匙<br />
 	  <img src="平298.jpg" width="400" height="300" /><br />
 	  <br />
 	  6、义务劳动（第10次）<br />
@@ -470,7 +468,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	    <img src="平273.jpg" width="400" height="300" /><img src="平274.jpg" width="400" height="300" /><br />
 	    <br />
 	    4、六一节目排练<br />
-	    在娱委李沛霖、徐婧语、姚彩晴、王浩权等同学的带领下，合唱、舞蹈、乐器三个小组都在利用中午时间进行排练。<br />
+	    在娱委沛、语、彩、权等同学的带领下，合唱、舞蹈、乐器三个小组都在利用中午时间进行排练。<br />
 	    <img src="平283.jpg" width="400" height="300" /><img src="平284.jpg" width="400" height="300" /><br />
 	    <br />
 	    5、义务劳动（第8次）<br />
@@ -479,7 +477,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	    <img src="平277.jpg" width="400" height="300" /><img src="平278.jpg" width="400" height="300" /><br />
 	    <br />
 	    6、足球比赛准备<br />
-	    年级发布最新足球比赛通知，胡彦淳、李孟方鑫等同学按通知进行准备。<br />
+	    年级发布最新足球比赛通知，淳、李孟等同学按通知进行准备。<br />
 	    <br />
 	    7、安全教育活动报名<br />
 	    年级安全教育活动准备中<br />
@@ -496,34 +494,34 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	    5月1日至5日放假<br />
         <br />
 	    2、期中成绩<br />
-	    前十名：付子裕、曹熙媛、王艺霖、张扬柯、李嘉骏、陈玥仪、刘圳宸、江静怡、位一欧、欧宇杰<br />
-	    进步100以上：陈玥仪、欧宇杰、黄宝仪、高悦然、位一欧、庞子傲、严逸冰<br />
-	    进步50~100：丁瑾禹、高宇轩、刘圳宸、杨浩宸、袁千茹、江静怡、付子裕、赵启航<br />
+	    前十名：付、曹、艺、柯、骏、玥、圳、江、位、欧<br />
+	    进步100以上：玥、欧、宝、悦、位、庞、冰<br />
+	    进步50~100：禹、轩、圳、宸、茹、江、付、航<br />
 	    <br />
 	    小组均分：399（仁）  394（礼）   384（义）  368（信）   353（智） <br />
-        小组头名：付子裕（仁）、李嘉骏（义）、刘圳宸（礼）、王艺霖（智）、张扬柯（信）
+        小组头名：付（仁）、骏（义）、圳（礼）、艺（智）、柯（信）
 	      <p>单科情况（前200）：<br />
-	      语文：高悦然（110）、王艺霖、付子裕、江静怡、曹熙媛、陈玥仪、李嘉骏、陈华慈、徐婧语、张扬柯、毛雨洋、郑一民、杨哲宇、丁瑾禹、丁思云、李孟方鑫、林昶荣、黄宝仪、位一欧、欧宇杰、严逸冰、杨元曦<br />
+	      语文：悦（110）、艺、付、江、曹、玥、骏、慈、语、柯、毛、民、哲、禹、云、李孟、昶、宝、位、欧、冰、曦<br />
           <br />
-          数学：欧宇杰（100）、杨元曦、刘圳宸、位一欧、付子裕、陈华慈、丁思云、林昶荣、曹熙媛、李梓昕、李嘉骏、李承辉、张扬柯<br />
+          数学：欧（100）、曦、圳、位、付、慈、云、昶、曹、昕、骏、承、柯<br />
           <br />
-          英语：江静怡（93.5）、付子裕、曹熙媛、李嘉骏、刘圳宸、王艺霖、位一欧、陈玥仪、徐婧语、高悦然、丁思云、林昶荣、胡铭灏、杨元曦、张扬柯、胡彦淳<br />
+          英语：江（93.5）、付、曹、骏、圳、艺、位、玥、语、悦、云、昶、灏、曦、柯、淳<br />
           <br />
-          历史：曹熙媛（100）、张扬柯、付子裕、王艺霖、郑一民、陈玥仪、刘圳宸、吴毓焓、欧宇杰、白石齐、位一欧、丁思云、胡彦淳、杨哲宇、李嘉骏、陈华慈、江静怡、李梓昕、袁千茹<br />
+          历史：曹（100）、张、付、艺、民、玥、圳、焓、欧、白、位、云、淳、哲、骏、慈、江、昕、茹<br />
           <br />
-          道法：付子裕（98）、李嘉骏（98）、王艺霖、陈玥仪、曹熙媛、张扬柯、欧宇杰、江静怡、高悦然、吴毓焓、陈华慈、
-	      李承辉、王绚儿、郑一民、杨元曦、丁思云、林昶荣、杨浩宸、杨哲宇、位一欧、袁千茹、徐婧语、毛雨洋<br />
+          道法：付（98）、骏（98）、艺、玥、曹、柯、欧、江、悦、焓、慈、
+	      承、绚、民、曦、云、昶、宸、哲、位、茹、语、毛<br />
 	      <br />
-	      地理：付子裕（100）、王艺霖（100）、郑一民（100）、曹熙媛、李承辉、张扬柯、位一欧、陈玥仪、胡彦淳、刘圳宸、庞子傲、陈华慈、杨元曦、李梓昕、杨哲宇、毛雨洋、白石齐<br />
+	      地理：付（100）、艺（100）、民（100）、曹、承、柯、位、玥、淳、圳、庞、慈、曦、昕、哲、毛、白<br />
           <br />
-        生物：曹熙媛（100）、陈华慈（100）、付子裕、高悦然、王艺霖、张扬柯、刘圳宸、林昶荣、陈玥仪、江静怡、欧宇杰、吴毓焓、胡彦淳、杨元曦、郑一民、李梓昕、李嘉骏<br />
+        生物：曹（100）、慈（100）、付、悦、艺、柯、圳、昶、玥、江、欧、焓、淳、曦、民、昕、骏<br />
         <br />
         3、年级期中表彰<br />
         5月8日，下午4点，先锋剧场。年级期中考试表彰大会。<br />
-        优异奖：付子裕、曹熙媛、王艺霖、张扬柯<br />
-        单科奖：欧宇杰、曹熙媛、付子裕、王艺霖、郑一民、陈华慈<br />
-        超越奖：陈玥仪、欧宇杰、黄宝仪、高悦然<br />
-        陈玥仪发表演讲<br />
+        优异奖：付、曹、艺、柯<br />
+        单科奖：欧、曹、付、艺、民、慈<br />
+        超越奖：玥、欧、宝、悦<br />
+        玥发表演讲<br />
         <img src="平267.jpg" width="400" height="266" /><img src="平268.jpg" width="400" height="266" /><br />
         <img src="平272.jpg" width="400" height="244" /><img src="平269.jpg" width="400" height="254" /><br />
         <img src="平270.jpg" width="400" height="266" /><img src="平271.jpg" width="400" height="266" /><br />
@@ -554,7 +552,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	    3、座位新规——“留学”<br />
 	    <img src="平261.jpg" width="500" height="375" /><br />
 	    4、节目组筹备<br />
-	    娱委李沛霖与徐婧语、高悦然、陈玥仪等策划新节目<br />
+	    娱委沛与语、悦、玥等策划新节目<br />
 	    <br />
 	    5、班主任强调<br />
 	    三思而后行（天、地、人）</td>
@@ -617,9 +615,9 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	<tr>
 	  <td class="style27"><p>1、清明节放假（周一）</p>
       <p>2、商议足球队事宜<br />
-      因学校将在本期组织足球活动，胡彦淳、李孟方鑫等开始策划组建球队，并展开训练。</p>
+      因学校将在本期组织足球活动，淳、李孟等开始策划组建球队，并展开训练。</p>
       <p>3、篮球友谊赛<br />
-      4月9日下午，力行楼篮球场。我班与9班举行了一场篮球赛，分上下半场，共30分钟。我班21：14获胜。裁判武老师。上场队员：李子豪、吴卓桁、李嘉骏、李承辉、高宇轩、吴弈然。<br />
+      4月9日下午，力行楼篮球场。我班与9班举行了一场篮球赛，分上下半场，共30分钟。我班21：14获胜。裁判武老师。上场队员：豪、桁、骏、承、轩、弈。<br />
         <img src="平243.jpg" width="400" height="300" /><img src="平247.jpg" width="400" height="300" /><br />
         <img src="平244.jpg" width="400" height="300" /><img src="平246.jpg" width="400" height="300" /><br />
         <img src="平245.jpg" width="400" height="300" /><img src="平242.jpg" width="400" height="300" /></p>
@@ -643,8 +641,8 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	    <br />
 	  2.三月单元测试汇总通报：<br />
 	    语数英史道五科总分420，班均分315，最低分217，最高分395，仁组均分334，义组322，礼组317，信组309，智组289。<br />
-	    340分以上有：曹熙媛、付子裕、李嘉骏、王艺霖、张扬柯、郑一民、林昶荣、丁思云、陈华慈、刘圳宸、江静怡、
-      陈玥仪、吴毓焓、徐婧语、李承辉、位一欧、高宇轩、胡彦淳、杨元曦。 </p>
+	    340分以上有：曹、付、骏、艺、柯、民、昶、云、慈、圳、江、
+      玥、焓、语、承、位、轩、淳、曦。 </p>
 	    <p>3.体育测试<br />
 3月31日，体育课，100米测试。</p>
 	    <p>4、家长来访<br />
@@ -662,7 +660,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
   </tr>
 	<tr>
 	  <td class="style27">1、全校升旗集会<br />
-	    3月22日晨，先锋剧场，全校升旗集会，主题是环保。我班毛雨洋同学作主题发言：保护环境，从我做起。<br />
+	    3月22日晨，先锋剧场，全校升旗集会，主题是环保。我班毛同学作主题发言：保护环境，从我做起。<br />
 	    <img src="平225.jpg" width="600" height="450" /><br />
 	    <img src="平226.jpg" width="400" height="300" /><img src="平227.jpg" width="400" height="300" /><br />
 	    <img src="平229.jpg" width="400" height="300" /><img src="平228.jpg" width="400" height="300" /><br />
@@ -696,7 +694,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	    <img src="平222.jpg" width="400" height="300" /><img src="平221.jpg" width="400" height="300" /><br />
 	    <br />
 	    2、准备全校升旗仪式上的讲话<br />
-	    毛雨洋、江静怡、刘圳宸、庞子傲准备稿子和PPT，高悦然、陈玥仪参与修改。<br />
+	    毛、江、圳、庞准备稿子和PPT，悦、玥参与修改。<br />
 	    <img src="平215.jpg" width="400" height="300" /><img src="平216.jpg" width="400" height="300" /><br />
 	    <br />
 	    3、图书馆静校<br />
@@ -725,7 +723,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
             <img src="平201.jpg" width="400" height="300" /><img src="平198.jpg" width="400" height="300" /><br />
         <br />
       3、班委会议<br />
-        自从本周起实行班长通报课堂记录后，为提升班干部的执法效能，特于3月12日（周五）放学时间在D204召开了班委会（班委+组长），会议由班长王艺霖同学主持，围绕班干部自身的“公平性、主动性、自律性”三个方面展开批评与自我批评。<br />
+        自从本周起实行班长通报课堂记录后，为提升班干部的执法效能，特于3月12日（周五）放学时间在D204召开了班委会（班委+组长），会议由班长艺同学主持，围绕班干部自身的“公平性、主动性、自律性”三个方面展开批评与自我批评。<br />
           <img src="平206.jpg" width="400" height="300" /><img src="平207.jpg" width="400" height="300" /><br />
         <br />
       4、D204自习室义务劳动（第2次）<br />
@@ -764,7 +762,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
 	    本周向家长发起有关课后延时服务的调查，并指导学生根据个人情况进行申报<br />
 	    <br />
 	    4、网络素养课程培训<br />
-	    学生处组织网络素养课程培训，我班下列同学参加：谢彤、陈华慈、王艺霖、丁思云、曹熙媛、严逸冰、林昶荣<br />
+	    学生处组织网络素养课程培训，我班下列同学参加：彤、慈、艺、云、曹、冰、昶<br />
 	    <br />
 	    5、D204义务劳动（第1次）<br />
 	    3月5日，部分同学报名参加D204义务清洁活动<br />
@@ -790,7 +788,7 @@ D605，雍睦堂门口、雍睦堂会场内<br />
          周二、周三下午组织了数学和英语的开学测试<br />  
         <br />
         3、静校<br />
-        共46人静校，6人在图书馆，8人在自习室，其余在教室。江静怡管理，王绚儿协理，李承辉监督。<br />
+        共46人静校，6人在图书馆，8人在自习室，其余在教室。江管理，绚协理，承监督。<br />
         <br />
         4、检查寒假作业<br />
           <br />
