--- a/20208/8班九上周志.html
+++ b/20208/8班九上周志.html
@@ -143,15 +143,15 @@
 （二）积极关注身心健康，毋意、毋必、毋固、毋我。 </p>
 		  <p>附：班级领导团队——挑战竞争，青春无悔<br />
 		    团支部：
-		  李嘉骏（团支书）  高悦然（团宣委）<br />
+		  骏（团支书）  悦（团宣委）<br />
 		  班委会：
-		    班长：王艺霖                副班长：曹熙媛              <br />
-		    学习委员：张扬柯           体育委员： 陈华慈（总负责） 吴毓焓 丁思云      宣传委员：高悦然  
-		    江静怡（协理）文娱委员：陈玥仪           生活委员：王绚儿          纪律委员：李承辉 电教管理员：刘圳宸  
+		    班长：艺                副班长：曹              <br />
+		    学习委员：柯           体育委员： 慈（总负责） 焓 云      宣传委员：悦  
+		    江（协理）文娱委员：玥           生活委员：绚          纪律委员：承 电教管理员：圳  
 		      
-		    静校管理员：姚彩晴（总负责）徐培杰、林昶荣、庞子傲、王浩权  
-		    卫生委员：胡铭灏（总负责） 李承辉、姚彩晴<br />
-学习小组：仁（付子裕）、义（李梓昕）、礼（欧宇杰）、智（吴毓焓）、信（张扬柯）</p>
+		    静校管理员：彩（总负责）培、昶、庞、权  
+		    卫生委员：灏（总负责） 承、彩<br />
+学习小组：仁（付）、义（昕）、礼（欧）、智（焓）、信（柯）</p>
 		  <p>家委会—— 
 		    会长：黎女士（悦然妈）<br />
 		    学习部：宇杰妈，悦然妈，容达妈、扬柯妈  ==
@@ -401,7 +401,7 @@
 	    （1）喜迎二十大，学习报告金句；<br />
 	    （2）观看《领航》第2集；<br />
 	    <br />
-	    2、张容达绘画作品获奖<br />
+	    2、达绘画作品获奖<br />
 	    <img src="平724.jpg" width="400" height="300" /><img src="平721.jpg" width="400" height="248" /><br />
 	    <br />
 	    3、年级诗歌默写比赛<br />
@@ -431,7 +431,7 @@
 	    <img src="平714.jpg" width="400" height="300" /><img src="平715.jpg" width="400" height="300" /><br />
 	    <br />
 	    3、生地会考成绩<br />
-	    付子裕、陈华慈潢分，9个A+，24个A。<br />
+	    付、慈满分，9个A+，24个A。<br />
 	    <br />
 	    4、选拔新团员<br />
 	    10月11日，团支部选拔新团员。通过自我推荐和全班投票，选出6位同学：艺、付、毛、江、焓、云。 
@@ -499,7 +499,7 @@
 	<tr>
 	  <td bgcolor="#FFFFFF" class="STYLE48">1、开学诊断<br />
 	    9月19日，年级组织了语数英物四个学科检测。<br />
-	    前十：付子裕、王艺霖、曹熙媛、陈华慈、吴毓焓、刘圳宸、林昶荣、杨元曦、位一欧、陈玥仪<br />
+	    前十：付、艺、曹、慈、焓、圳、昶、曦、位、玥<br />
 	    <br />
 	    2、开学典礼<br />
 	    9月19日下午4：40，足球场，学校组织了以“辉光日新、筑梦未来”为主题的开学典礼。朱校长讲话。我班荣获“先进班集体奖”和“腾讯优秀团队奖”。林同学获“阳光少年”称号。<br />	    <img src="平689.jpg" width="400" height="300" /><img src="平691.jpg" width="400" height="300" /><br />
@@ -511,7 +511,7 @@
 	    <img src="平697.jpg" width="500" height="278" /><br />
 	    <br />
 	    4、数学培训<br />
-	    加入名单：付子裕、王艺霖、曹熙媛、陈华慈、欧宇杰。<br />
+	    加入名单：付、艺、曹、慈、欧。<br />
 	    <br />
 	    5、班团朗诵<br />
 	    <img src="平696.jpg" width="400" height="300" /><img src="平693.jpg" width="400" height="300" /><br />
