--- a/20208/8班八上周志.html
+++ b/20208/8班八上周志.html
@@ -139,13 +139,13 @@
 		    口号：奋斗点亮自己 光芒照亮他人<br />
 		    结构：班主任----班委会----学习小组-----家长群</p>
 		  <p>班委会<br />
-		    班长：王艺霖                副班长：曹熙媛              <br />
-		    学习委员：张扬柯           体育委员：李嘉骏 陈华慈 江静怡       宣传委员：高悦然 <br />
-		    文娱委员：陈玥仪           生活委员：王绚儿          纪律委员：李承辉<br />
-		    电教管理员：刘圳宸  
-		    静校管理员：江静怡（协理：李承辉、姚彩晴、徐培杰）、丁思云（图书馆）<br />
-		    卫生委员：李嘉骏（总负责） 李承辉+胡明灏+姚彩晴<br />
-学习小组：仁（付子裕）、义（李梓昕）、礼（欧宇杰）、智（吴毓焓）、信（张扬柯）</p>
+		    班长：艺                副班长：曹              <br />
+		    学习委员：柯           体育委员：骏 慈 江       宣传委员：悦<br />
+		    文娱委员：玥           生活委员：绚          纪律委员：承<br />
+		    电教管理员：圳  
+		    静校管理员：江（协理：承、彩、培）、云（图书馆）<br />
+		    卫生委员：骏（总负责） 承+灏+彩<br />
+学习小组：仁（付）、义（昕）、礼（欧）、智（焓）、信（柯）</p>
 		  <p>家委会—— <br />
 		    会长：黎女士（悦然妈）<br />
 		    学习部：宇杰妈，悦然妈，容达妈、扬柯妈<br />
@@ -174,7 +174,7 @@
 	  <td bgcolor="#339933" class="STYLE44">第20周</td>
   </tr>
 	<tr>
-	  <td bgcolor="#CCFFCC" class="style27"><p>1、班级风采展示：3分钟视频。王艺霖、刘圳宸、高悦然、王浩权、吴卓桁、袁千茹、汪子博等制作完成。<br />
+	  <td bgcolor="#CCFFCC" class="style27"><p>1、班级风采展示：3分钟视频。艺、圳、悦、权、桁、茹、汪等制作完成。<br />
 		  <video controls="controls" width="500px" height="350px" preload="metadata">
 		    <source src="./xjbpb3.mp4" type="video/mp4">
 	        </video>
@@ -229,7 +229,7 @@
   </tr>
 	<tr>
 	  <td bgcolor="#CCFFCC" class="style27">1、班级元旦联欢<br />
-	    2021年12月31日下午3：30-5：20，C403本班教室，音乐课+自习课时间，班级举行迎新年元旦联欢活动。主持人：江静怡、毛雨洋、李子豪、汪子博。总策划：王艺霖、曹熙媛、陈玥仪。会场布置：高悦然、李嘉骏、徐培杰等。PPT制作：刘圳宸。摄影：杨元曦。饮食购置：家委会长。节目：各组组长。卫生：仁组。<br />
+	    2021年12月31日下午3：30-5：20，C403本班教室，音乐课+自习课时间，班级举行迎新年元旦联欢活动。主持人：江、毛、豪、汪。总策划：艺、曹、玥。会场布置：悦、骏、培等。PPT制作：圳。摄影：曦。饮食购置：家委会长。节目：各组组长。卫生：仁组。<br />
 	    <img src="平496.jpg" width="400" height="300" /><img src="平497.jpg" width="400" height="300" /><br />
 	    <img src="平499.jpg" width="400" height="300" /><img src="平502.jpg" width="400" height="300" /><br />
 	    <img src="平503.jpg" width="400" height="300" /><img src="平504.jpg" width="400" height="300" /><br />
@@ -251,7 +251,7 @@
 	    <img src="平521.jpg" width="400" height="188" /><img src="平522.jpg" width="400" height="188" /><br />
 	    <br />
 	    4、校园十大歌手决赛<br />
-	    12月27日，玥仪同学参加此项比赛。<br />
+	    12月27日，玥同学参加此项比赛。<br />
 	    <img src="平491.jpg" width="400" height="300" /><img src="平492.jpg" width="400" height="300" /><br />
 	    <br />
 	    5、义工活动（第18次，19次）<br />
@@ -272,7 +272,7 @@
         家委制作劳动教育公众号（班级公众号第12期）：<a href="https://mp.weixin.qq.com/s/FGmZe-UitVXQoUCDp5MIgA">劳动创造美好生活</a><br />
         <br />
 	    2、法律知识竞赛<br />
-	    12月22日，道法科组举行初二年级法律知识竞赛。李承辉、陈华慈获得一等奖。<br />
+	    12月22日，道法科组举行初二年级法律知识竞赛。承、慈获得一等奖。<br />
 	    <img src="平489.jpg" width="400" height="300" /><br />
 	    <br />
 	    3、12月24日上午，期末英语听说考试<br />
@@ -332,7 +332,7 @@
 	  12月6日，年级统一主题：劳动教育<br />
 	    <br />
 	  2、推进学校倡导的“我劳动我光荣”的劳动科技活动<br />
-	  12月6日，由曹熙媛同学组织各组制定活动计划。<br />
+	  12月6日，由曹同学组织各组制定活动计划。<br />
 	    <img src="平477.jpg" width="300" height="400" /><img src="平478.jpg" width="300" height="400" /><br />
 	    <br />
 	  3、体测<br />
@@ -355,12 +355,12 @@
 	  <td bgcolor="#CCFFCC" class="style27">1、运动会<br />
 	    11月28-29日，为期两天的运动会结束，相较于初一，我们进步明显。年级第五，精神文明奖，方队才艺奖。 <br />
 	    校运会个人项目：<br />
-	    男子100米林昶荣第7名；
-	    女子100米袁千茹第4名，谢彤第10名<br />
-	    男子实心球李嘉骏第11名，女子实心球严逸冰第12名<br />
-	    男子800米欧宇杰第7名，女子800米江静怡第一名<br />
-	    男子立定跳远吴毓焓第6名，汪子博第10名；
-	    女子立定跳远徐婧语第5名，陈玥仪第7名<br />
+	    男子100米昶第7名；
+	    女子100米茹第4名，彤第10名<br />
+	    男子实心球骏第11名，女子实心球冰第12名<br />
+	    男子800米欧第7名，女子800米江第一名<br />
+	    男子立定跳远焓第6名，汪第10名；
+	    女子立定跳远语第5名，玥第7名<br />
 	    <img src="平459.jpg" width="400" height="300" /><img src="平461.jpg" width="400" height="300" /><br />
 	    <img src="平462.jpg" width="400" height="300" /><img src="平460.jpg" width="400" height="300" /><br />
 	    <img src="平468.jpg" width="400" height="300" /><img src="平467.jpg" width="400" height="300" /><br />
@@ -389,14 +389,14 @@
 	    11月22日晨，期中表彰与运动会动员<br />
 	    <br />
 	    2、入场式训练<br />
-	    本周中午陈玥仪、姚彩晴分批次教同学们跳舞。<br />
+	    本周中午玥、彩分批次教同学们跳舞。<br />
 	    <img src="平464.jpg" width="400" height="300" /></p>
 	    <p>3、班服<br />
-	    高悦然、杨元曦等同学设计班服，家委协助制作。<br />
+	    悦、曦等同学设计班服，家委协助制作。<br />
 	        <img src="平463.jpg" width="400" height="300" /><br />
 	      <br />
 	    4、英语阅读比赛<br />
-	    熙媛同学年级（1-12）第一<br />
+	    媛同学年级（1-12）第一<br />
 	    <br />
 	    5、义工活动（1126第11次）<br />
 本周校内义工活动：D404。<br />
@@ -456,44 +456,44 @@
 	    <img src="平432.jpg" width="400" height="300" /><img src="平438.jpg" width="400" height="300" /><br />
 	    <br />
 	    2、期中考试成绩（1-10）<br />
-	    总分A+等（3人）：曹熙媛、付子裕、王艺霖；<br />
+	    总分A+等（3人）：曹、付、艺；<br />
 	    A等（15人）：云、骏、焓、柯、玥、圳、慈、荣、位、语、郑、毛、杰、曦、淳<br />
 	    <br />
-	    语文A+等（2人）：曹熙媛、吴毓焓；<br />
+	    语文A+等（2人）：曹、焓；<br />
 	    A等（17人）：裕、霖、悦、慈、江、骏、云、淳、语、鑫、玥、郑、荣、杰、柯、毛、位<br />
 	    <br />
-	    数学A+等（4人）：欧宇杰、吴毓焓、付子裕、陈玥仪；<br />
+	    数学A+等（4人）：欧、焓、付、玥；<br />
 	    A等（12人）：曹、位、圳、骏、云、辉、轩、柯、淳、语、荣、培<br />
 	    <br />
-	    英语A+等（6人）：曹熙媛、丁思云、
-	    杨元曦、
-	      付子裕、
-	      徐婧语、
-	      王艺霖；<br />
+	    英语A+等（6人）：曹、云、
+	    曦、
+	      付、
+	      语、
+	      艺；<br />
         A等（12人）：江、骏、位、荣、玥、灏、圳、慈、昕、悦、毛、庞<br />
 	      <br />
-        历史A+等（5人）：付子裕、王艺霖、李嘉骏、曹熙媛、白石齐；<br />
+        历史A+等（5人）：付、艺、骏、曹、白；<br />
         A等（11人）：
         柯、郑、玥、慈、毛、庞、云、荣、圳、焓、位<br />
 	      <br />
-        物理A+等（5人）：张扬柯、付子裕、欧宇杰、丁思云、郑一民；<br />
+        物理A+等（5人）：柯、付、欧、云、民；<br />
         A等（14人）：曹、曦、霖、荣、圳、焓、谢、骏、慈、毛、淳、玥、绚、辉<br />
 	      <br />
-        道法A+等（8人）：张扬柯、庞子傲、吴毓焓、付子裕、李嘉骏、王艺霖、曹熙媛、刘圳宸；<br />
+        道法A+等（8人）：柯、庞、焓、付、骏、艺、曹、圳；<br />
         A等（8人）：
         严、慈、毛、位、茹、语、云、涵<br />
 	      <br />
-        地理A+等（10人）：曹熙媛、付子裕、陈玥仪、李承辉、王艺霖、陈华慈、林昶荣、郑一民、杨元曦、白石齐；<br />
+        地理A+等（10人）：曹、付、玥、承、艺、慈、昶、民、曦、白；<br />
         A等（11人）：
         柯、云、圳、毛、昕、哲、骏、淳、凯、蔡、涵<br />
         <br />
-        生物A+等（6人）：张扬柯、曹熙媛、吴毓焓、付子裕、王艺霖、陈华慈；<br />
+        生物A+等（6人）：柯、曹、焓、付、艺、慈；<br />
         A等（7人）：
         语、云、绚、荣、玥、位、曦<br />
         <br />
 	      <br />
         3、校运会准备<br />
-	      项目报名（李嘉骏）、班服设计（高悦然等）、队列设计（陈玥仪等）<br />
+	      项目报名（骏）、班服设计（悦等）、队列设计（玥等）<br />
           <img src="平433.jpg" width="400" height="300" /><br />
           <br />
           4、义工活动（1112第9次）<br />
@@ -568,13 +568,13 @@
 	    10月18日晨，班会课。主题是生命教育。<br />
 	    <br />
 	    2、党史学习小组研究活动<br />
-	    10月18日中午，图书馆研究室，郑一民、白石齐等14人，第一次集中学习。<br />
+	    10月18日中午，图书馆研究室，郑、白等14人，第一次集中学习。<br />
 	    <img src="平408.jpg" width="400" height="300" /><img src="平409.jpg" width="400" height="300" /><br />
 	    <br />
-	    3、徐婧语参加市合唱演出<br />
+	    3、语参加市合唱演出<br />
 	    <img src="平412.jpg" width="400" height="300" /><br />
 	    <br />
-	    4、林昶荣代表深圳羽毛球队获得省赛团体冠军<br />
+	    4、昶代表深圳羽毛球队获得省赛团体冠军<br />
 	    <img src="平417.jpg" width="335" height="300" /><br />
 	    <br />
 	    5、义工活动（1022第7次）<br />
@@ -646,7 +646,7 @@
   </tr>
 	<tr>
 	  <td bgcolor="#CCFFCC" class="style27"><p>1、国庆展演<br />
-9月29日下午4：30-6：00，先锋剧场。陈玥仪、徐婧语、李沛霖、刘圳宸、毛雨洋、胡明灏、王绚儿、王浩权、姚彩晴等30多人参与此次展演。<br />
+9月29日下午4：30-6：00，先锋剧场。玥、语、沛、圳、毛、灏、绚、权、彩等30多人参与此次展演。<br />
 <img src="平389.jpg" width="400" height="300" /><img src="平387.jpg" width="400" height="300" /><br />
 <img src="平388.jpg" width="400" height="300" /><img src="平386.jpg" width="400" height="300" /><br />
 <img src="平384.jpg" width="400" height="300" /><img src="平385.jpg" width="400" height="300" /><br />
@@ -659,7 +659,7 @@
 	        <img src="平381.jpg" width="400" height="300" /><br />
             <br />
               4、国庆宣传板报——爱国诗，迎国庆<br />
-          9月30日午读时间，全班同学参与爱国诗歌抄录，共迎国庆。高悦然、袁千茹等制作完成。<br />
+          9月30日午读时间，全班同学参与爱国诗歌抄录，共迎国庆。悦、茹等制作完成。<br />
             <img src="平373.jpg" width="600" height="450" /><br />
               <img src="平374.jpg" width="300" height="225" /><img src="平375.jpg" width="300" height="225" /><br />
                 <br />
@@ -681,7 +681,7 @@
 	  <td bgcolor="#CCFFCC" class="style27"><p>1、中秋放假——<a href="https://mp.weixin.qq.com/s/htsMOFTnqdoSaHJ_GAV5tA">与您共度中秋佳节</a>（班级公众号第9期）<br />
         <br />
       2、足球比赛<br />
-      9月24日周五下午，8班与9班补赛上学期年级足球小组赛未完成场次，0：3告负。胡彦淳带伤坚持上场，守门员李承辉被撞破鼻子离场。本次上场队员还有：李嘉骏、汪子博、李孟方鑫、张凯然、杨哲宇（上半场）、沈琮博、吴卓桁（下半场）、庞子傲（下半场）、刘圳宸（下半场）<br />
+      9月24日周五下午，8班与9班补赛上学期年级足球小组赛未完成场次，0：3告负。胡彦淳带伤坚持上场，守门员承被撞破鼻子离场。本次上场队员还有：骏、汪、李孟、凯、哲（上半场）、琮、桁（下半场）、庞（下半场）、圳（下半场）<br />
       <img src="平370.jpg" width="400" height="300" /><img src="平371.jpg" width="400" height="300" /><br />
 	  <img src="平368.jpg" width="400" height="300" /><img src="平369.jpg" width="400" height="300" /><br />
 	  <br />
@@ -725,7 +725,7 @@
 	  （1）观看视频<br />
 	  （2）分组讨论<br />
 	  （3）知识竞赛<br />
-	  （4）评选优秀：李嘉骏、刘圳宸、赵启航、胡铭灏、庞子傲、王浩权、陈华慈、欧宇杰、王艺霖、付子裕<br />
+	  （4）评选优秀：骏、圳、航、灏、庞、权、慈、欧、艺、付<br />
 	  <br />
 	  6、选修课网上选课<br />
 	  9月17日晚，网上选课完毕</p>
@@ -802,12 +802,12 @@
 	    <img src="平329.jpg" width="400" height="300" /><img src="平322.jpg" width="400" height="300" /><br />
 	        <img src="平325.jpg" width="400" height="300" /><img src="平327.jpg" width="400" height="300" /></p>
 	    <p>        2、课堂情况<br />
-         增设了物理课（李梦娜老师），新道法老师刘师嘉。<br />
+         增设了物理课（梦娜老师），新道法老师师嘉。<br />
          整体情况较好。<br />
          <br />
         3、静校<br />
         共44人静校<br />
-        江静怡管理，王绚儿协理，李承辉监督。<br />
+        江管理，绚协理，承监督。<br />
         <img src="平332.jpg" width="400" height="300" /><br />
         <br />
           4、宣传<br />
