--- a/20208/8班八下周志.html
+++ b/20208/8班八下周志.html
@@ -144,13 +144,13 @@
 		  <p>团支部<br />
 		  李嘉骏  高悦然  </p>
 		  <p>班委会<br />
-		    班长：王艺霖                副班长：曹熙媛              <br />
-		    学习委员：张扬柯           体育委员：李嘉骏 陈华慈 江静怡       宣传委员：高悦然 <br />
-		    文娱委员：陈玥仪           生活委员：王绚儿          纪律委员：李承辉<br />
-		    电教管理员：刘圳宸  
-		    静校管理员：江静怡（协理：李承辉、姚彩晴、徐培杰）、丁思云（图书馆）<br />
-		    卫生委员：胡铭灏（总负责） 李承辉+李嘉骏+姚彩晴<br />
-学习小组：仁（付子裕）、义（李梓昕）、礼（欧宇杰）、智（吴毓焓）、信（张扬柯）</p>
+		    班长：艺                副班长：曹              <br />
+		    学习委员：柯           体育委员：骏 慈 江       宣传委员：悦 <br />
+		    文娱委员：玥           生活委员：绚          纪律委员：承<br />
+		    电教管理员：圳  
+		    静校管理员：江（协理：承、彩、培）、云（图书馆）<br />
+		    卫生委员：灏（总负责） 承+骏+彩<br />
+学习小组：仁（付）、义（昕）、礼（欧）、智（焓）、信（柯）</p>
 		  <p>家委会—— <br />
 		    会长：黎女士（悦然妈）<br />
 		    学习部：宇杰妈，悦然妈，容达妈、扬柯妈<br />
@@ -268,13 +268,13 @@
 	    <br />
 	    3、学期评优<br />
 	    利用自习课组织学生投票，选出三好、优干、特别奖等<br />
-	    三好学生：曹熙媛  王艺霖  李嘉骏  丁思云  毛雨洋<br />
-	    优秀班干：高悦然  陈华慈  刘圳宸<br />
-创新思维奖： 欧宇杰  张扬柯  吴毓焓  杨元曦<br />
-好习惯奖： 曹熙媛  付子裕  位一欧  李梓昕<br />
-自我超越奖： 陈华慈  陈玥仪  黄宝仪   胡彦淳<br />
-特长生奖： 林昶荣  徐婧语  王绚儿  王艺霖<br />
-热心公益奖： 胡铭灏  李嘉骏  姚彩晴  江静怡<br />
+	    三好学生：曹  艺  骏  云  毛<br />
+	    优秀班干：悦  慈  圳<br />
+创新思维奖： 欧  柯  焓  曦<br />
+好习惯奖： 曹  付  位  昕<br />
+自我超越奖： 慈  玥  宝   淳<br />
+特长生奖： 昶  语  绚  艺<br />
+热心公益奖： 灏  骏  彩  江<br />
 <br />
 4、期末英语听说</td>
   </tr>
@@ -348,7 +348,7 @@
 	    通过《特赦1959》视频片段，梳理“抗美援朝”取得胜利的原因，进而将其精神引入备战会考之中。<br />
       <br />
       2、学校组织“包粽子”活动<br />
-      6月1日中午，学校组织包粽子活动，雨洋、静怡参加。<br />
+      6月1日中午，学校组织包粽子活动，洋、怡参加。<br />
       <img src="平631.jpg" width="400" height="300" /><img src="平630.jpg" width="400" height="300" /><br />
       <img src="平628.jpg" width="400" height="300" /><img src="平629.jpg" width="400" height="300" /><br />
       <br />
@@ -394,7 +394,7 @@
 	    5月16日，按年级安排，组织了校园安全教育。<br />
 	    <br />
 	    2、论语诵读<br />
-	    5月19日4：45-5：45，论语诵读第3期。郭主持，丁思云记录。<br />
+	    5月19日4：45-5：45，论语诵读第3期。郭主持，云记录。<br />
 	    <img src="平612.jpg" width="400" height="300" /><img src="平611.jpg" width="400" height="300" /><br />
 	    <br />
 	    3、《钢铁是怎样炼成的》课堂小讲<br />
@@ -402,8 +402,8 @@
 	    <img src="平614.jpg" width="400" height="300" /><img src="平615.jpg" width="400" height="300" /><br />
 	    <img src="平616.jpg" width="400" height="300" /><img src="平613.jpg" width="400" height="300" /><br />
 	    <br />
-	    4、共赏徐婧语音乐作品<br />
-	    音乐课上，江老师指导大家一起欣赏徐婧语同学的音乐作品。<br />
+	    4、共赏语音乐作品<br />
+	    音乐课上，江老师指导大家一起欣赏语同学的音乐作品。<br />
 	    <img src="平617.jpg" width="400" height="222" /><img src="平618.jpg" width="400" height="222" /><br />
 	    <br />
 	    5、校内开展义工活动（第4次5月20日）<br />
@@ -421,7 +421,7 @@
 	    5月9日晨，班会课。<br />
 	    <br />
 	    2、收看共青团百年纪念大会<br />
-	    5月10日上午10点，收看纪念大会，预备团员王艺霖、高悦然、李嘉骏向团委提交观看心得报告。<br />
+	    5月10日上午10点，收看纪念大会，预备团员艺、悦、骏向团委提交观看心得报告。<br />
 	    <img src="平608.jpg" width="400" height="300" /><img src="平607.jpg" width="400" height="300" /><br />
 	    <br />
 	    3、阳光体育<br />
@@ -438,7 +438,7 @@
 	    5月12日下午4：00-5：00，腾讯会议，线上诵读，郭主持，白记录。<br />
 	    <br />
 	    7、音乐创作<br />
-	    5月12-14日，婧语同学在家独自进行了编曲、伴奏和演唱等音乐创作活动，虽是初试，却已得到相关专业人士的肯定。<br />
+	    5月12-14日，语同学在家独自进行了编曲、伴奏和演唱等音乐创作活动，虽是初试，却已得到相关专业人士的肯定。<br />
 	    <a href="https://mp.weixin.qq.com/s/9fPGfQ6-P00Noh0qMRJDjA">我看谜语中的你</a><br />
 	    <img src="平603.jpg" width="400" height="292" /><br />
 	    <br /></td>
@@ -545,7 +545,7 @@
 	    <img src="平572.jpg" width="400" height="300" /><img src="平571.jpg" width="400" height="300" /><br />
 	    <br />
 	    2、线上主题班会<br />
-	    4月11日晨，年级统一线上主题班会，“心之所向，生命之光”，由刘圳宸主讲。<br />
+	    4月11日晨，年级统一线上主题班会，“心之所向，生命之光”，由圳主讲。<br />
 	    <img src="平579.jpg" width="400" height="248" /><img src="平580.jpg" width="400" height="241" /><br />
 	    <br />
 	    3、复学后各项工作稳步有序推进<br />
@@ -576,7 +576,7 @@
   </tr>
 	<tr bgcolor="#00FF00" class="STYLE44">
 	  <td bgcolor="#CCFFCC" class="STYLE48">1、主题班会：缅怀先烈 珍惜当下（清明节主题）<br />
-	    4月2日（周六调周一）早上，学校组织各班召开线上主题班会，主题是缅怀先烈，珍惜当下。会议由班长艺霖同学主讲。陈华慈、李梓昕、欧宇杰、孙彦良、郑一民分别讲述了一个有关英烈的故事。<br />
+	    4月2日（周六调周一）早上，学校组织各班召开线上主题班会，主题是缅怀先烈，珍惜当下。会议由班长艺同学主讲。慈、昕、欧、良、民分别讲述了一个有关英烈的故事。<br />
 	    <img src="平562.jpg" width="400" height="250" /><img src="平565.jpg" width="400" height="250" /><br />
 	    <img src="平563.jpg" width="400" height="250" /><img src="平564.jpg" width="400" height="250" /><br />
 	    <br />
@@ -599,7 +599,7 @@
           <img src="平566.jpg" width="400" height="226" /><img src="平567.jpg" width="400" height="226" /><br />
       <br />
       2、班委会<br />
-      3月31日晚上，部分班委和同学（慈、辉、付、昕、圳、姚、骏、栩、绚、云、杰、沈、林）在班长艺霖同学的组织下，对近期网课进行了总结，提出了一些问题。班干部的组织与管理能力在提升。<br />
+      3月31日晚上，部分班委和同学（慈、辉、付、昕、圳、姚、骏、栩、绚、云、杰、沈、林）在班长艺同学的组织下，对近期网课进行了总结，提出了一些问题。班干部的组织与管理能力在提升。<br />
       <img src="平568.jpg" width="400" height="299" /><br />
       <br />
       3、家委会<br />
@@ -610,7 +610,7 @@
       学校公众号：<a href="https://mp.weixin.qq.com/s/KRrEx2nk6FnkT76NwbAR9Q">23个先进班集体新鲜出炉 <br />
       <br />
       </a>5、新生加盟<br />
-      欢迎张栩涵同学。</td>
+      欢迎栩同学。</td>
   </tr>
 	<tr bgcolor="#00FF00" class="STYLE44">
 	  <td class="STYLE45">第5周（网课0321-0327）</td>
@@ -663,7 +663,7 @@
   </tr>
 	<tr bgcolor="#00FF00" class="STYLE44">
 	  <td bgcolor="#CCFFCC" class="style27"><span class="STYLE48">1、主题班会：</span><span class="STYLE49">新时代雷锋精神<br />
-	    3月7日，线上教室。由熙媛同学主讲。<br />
+	    3月7日，线上教室。由媛同学主讲。<br />
         <br />
 	  2、听读《傅雷家书》（跳读版）<br />
 	  为方便学生熟悉名著，特挑选重点部分朗读，发至相关网站。<br />
@@ -677,7 +677,7 @@
   </tr>
 	<tr bgcolor="#00FF00" class="STYLE44">
 	  <td bgcolor="#CCFFCC" class="STYLE48"><p>1、线上班会<br />
-	    2月28日晨，线上班会，主题是科学应对疫情，高效在线学习。班长艺霖同学主持。<br />
+	    2月28日晨，线上班会，主题是科学应对疫情，高效在线学习。班长艺同学主持。<br />
 	    <img src="平538.jpg" width="400" height="252" /><img src="平531.jpg" width="400" height="252" /></p>
 	    <p>2、班委讨论网课开启摄像头的问题<br />
           <img src="平532.jpg" width="400" height="220" /></p>
